##########################################################################################
#                                       create by impressionyang
#                                       2020 01 05
##########################################################################################


#set minimum compile version
cmake_minimum_required(VERSION 3.14)

#set project name
project(udp_brocast)

#add the src subdirectory
add_subdirectory(src)
